fix: month view appointment card visibility

--- a/src/app/shared/components/dfm-calendar/dfm-calendar-month-view/dfm-calendar-month-view.component.scss
+++ b/src/app/shared/components/dfm-calendar/dfm-calendar-month-view/dfm-calendar-month-view.component.scss
@@ -231,8 +231,7 @@ td {
 		left: 8px !important;
 	}
 
-	.calender-month-view-day-exam-event-time,
-	.calender-month-view-day-exam-event-title {
+  	.calender-month-view-day-exam-event-time {
 		display: none;
 	}
 
